githubAuth/isitup-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: isitup
  name: isitup
spec:
  replicas: 3
  selector:
    matchLabels:
      run: isitup
  template:
    metadata:
      labels:
        run: isitup
    spec:
      containers:
      - image: fsadykov/isitup:0.1
        name: isitup
        ports:
        - name: app-port
          containerPort: 5000
          protocol: TCP
