githubAuth/isitup-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  labels:
    run: isitup
  name: isitup
spec:
  rules:
  - host: github.isitup.fuchicorp.com
    http:
      paths:
      - backend:
          serviceName: isitup
          servicePort: http
        path: /
  tls:
  - hosts:
    - github.isitup.fuchicorp.com
    secretName: isitup-tls
